--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,24 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="partials/header.html" />
+    <main>
+      <load src="partials/hero.html" />
+      <load src="partials/about.html" />
+      <load src="partials/description.html" />
+      <load src="partials/how-to-play.html" />
+      <load src="partials/feature.html" />
+      <load src="partials/why-us.html" />
+      <load src="partials/reviews.html" />
+      <load src="partials/gallery.html" />
+      <load src="partials/google.html" />
+      <load src="partials/faq.html" />
+    </main>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <load src="partials/footer.html" />
+    <load src="partials/mobile-menu.html" />
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load src="partials/vite-promo.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
