--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Blaze Union</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
@@ -24,8 +24,6 @@
 
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
-
-    <load src="partials/vite-promo.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
