--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
       <load src="partials/description.html" />
       <load src="partials/how-to-play.html" />
       <load src="partials/feature.html" />
+      <load src="partials/quests.html" />
       <load src="partials/why-us.html" />
       <load src="partials/reviews.html" />
       <load src="partials/gallery.html" />
