Add footer to all pages

--- a/src/terms.html
+++ b/src/terms.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>terms</title>
+    <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
       <h1>Welcome to terms page</h1>
     </section>
+    <load src="partials/footer.html" />
   </body>
 </html>
