--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     </main>
 
     <load src="partials/footer.html" />
+    <load src="partials/cookie-popup.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
