--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cookies</title>
+    <title>Privacy Policy</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to cookies page</h1>
+      <h1>Welcome to privacy page</h1>
     </section>
     <load src="partials/footer.html" />
   </body>
