--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -9,10 +9,21 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to terms page</h1>
+    <section class="pages-container">
+      <div class="pages-header">
+        <a href="./index.html"
+          ><div class="pages-header-wrapper">
+            <img class="pages-icon" src="" alt="" /><span class="pages-back"
+              >Go to Home</span
+            >
+          </div></a
+        >
+      </div>
+      <div class="pages-content"><h1 class="pages-content-title" >Welcome to cookies page</h1c>
+      <h2 class="pages-title"></h2>
+    <p class="pages-text"></p></div>
     </section>
+
     <load src="partials/footer.html" />
   </body>
 </html>
