--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -17,8 +17,9 @@
               class="pages-icon"
               src="./img/pages/back.png"
               alt="Privacy Policy"
-            /><span class="pages-back-text">Go to Home</span>
-          </div></a
+            />
+          </div>
+          <span class="pages-back-text">Go to Home</span></a
         >
       </div>
       <div class="pages-content">
