--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -77,7 +77,7 @@
           to the Privacy Policy of the third-party service providers used by the
           Application:
         </p>
-        <ul class="pages-text">
+        <ul class="pages-list-text">
           <li>
             <a
               href="https://www.google.com/policies/privacy/"
