--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -107,7 +107,7 @@
           The Service Provider may disclose User Provided and Automatically
           Collected Information:
         </p>
-        <ul class="pages-text">
+        <ul class="pages-list-text">
           <li>
             as required by law, such as to comply with a subpoena, or similar
             legal process;
