--- a/src/cookies-policy.html
+++ b/src/cookies-policy.html
@@ -59,22 +59,21 @@
 
         <h3 class="pages-title-weak">Definitions</h3>
         <p class="pages-text">For the purposes of this Cookies Policy:</p>
-        <ul class="pages-text">
+        <ul class="pages-list-text">
           <li>
-            <b>Company</b> (referred to as either "the Company", "We", "Us" or
-            "Our" in this Cookies Policy) refers to Blaze Union.
+            Company (referred to as either "the Company", "We", "Us" or "Our" in
+            this Cookies Policy) refers to Blaze Union.
           </li>
           <li>
-            <b>Cookies</b> means small files that are placed on Your computer,
-            mobile device or any other device by a website, containing details
-            of your browsing history on that website among its many uses.
+            Cookies means small files that are placed on Your computer, mobile
+            device or any other device by a website, containing details of your
+            browsing history on that website among its many uses.
           </li>
           <li>
-            <b>Website</b> refers to Blaze Union, accessible from
-            blazewinnerway.com
+            Website refers to Blaze Union, accessible from blazewinnerway.com
           </li>
           <li>
-            <b>You</b> means the individual accessing or using the Website, or a
+            You means the individual accessing or using the Website, or a
             company, or any legal entity on behalf of which such individual is
             accessing or using the Website, as applicable.
           </li>
@@ -94,33 +93,33 @@
           We use both session and persistent Cookies for the purposes set out
           below:
         </p>
-
-        <p class="pages-text">Necessary / Essential Cookies</p>
         <ul class="pages-list-text">
-          <li><b>Type:</b> Session Cookies</li>
-          <li><b>Administered by:</b> Us</li>
-          <li>
-            <b>Purpose:</b> These Cookies are essential to provide You with
-            services available through the Website and to enable You to use some
-            of its features. They help to authenticate users and prevent
-            fraudulent use of user accounts. Without these Cookies, the services
-            that You have asked for cannot be provided, and We only use these
-            Cookies to provide You with those services.
-          </li>
+          <li class="pages-text">Necessary / Essential Cookies</li>
         </ul>
 
-        <h4 class="pages-title">Functionality Cookies</h4>
+        <p class="pages-text">Type: Session Cookies</p>
+        <p class="pages-text">Administered by: Us</p>
+        <p class="pages-text">
+          Purpose: These Cookies are essential to provide You with services
+          available through the Website and to enable You to use some of its
+          features. They help to authenticate users and prevent fraudulent use
+          of user accounts. Without these Cookies, the services that You have
+          asked for cannot be provided, and We only use these Cookies to provide
+          You with those services.
+        </p>
         <ul class="pages-list-text">
-          <li><b>Type:</b> Persistent Cookies</li>
-          <li><b>Administered by:</b> Us</li>
-          <li>
-            <b>Purpose:</b> These Cookies allow us to remember choices You make
-            when You use the Website, such as remembering your login details or
-            language preference. The purpose of these Cookies is to provide You
-            with a more personal experience and to avoid You having to re-enter
-            your preferences every time You use the Website.
-          </li>
+          <li>Functionality Cookies</li>
         </ul>
+
+        <p class="pages-text">Type: Persistent Cookies</p>
+        <p class="pages-text">Administered by: Us</p>
+        <p class="pages-text">
+          Purpose: These Cookies allow us to remember choices You make when You
+          use the Website, such as remembering your login details or language
+          preference. The purpose of these Cookies is to provide You with a more
+          personal experience and to avoid You having to re-enter your
+          preferences every time You use the Website.
+        </p>
 
         <h2 class="pages-title">Your Choices Regarding Cookies</h2>
         <p class="pages-text">
@@ -178,7 +177,9 @@
         <h2 class="pages-title">More Information about Cookies</h2>
         <p class="pages-text">
           You can learn more about cookies:
-          <a href="Cookies: What Do They Do?.">Cookies: What Do They Do?</a>.
+          <a class="pages-link-accent" href="Cookies: What Do They Do?."
+            >Cookies: What Do They Do?</a
+          >.
         </p>
 
         <h2 class="pages-title">Contact Us</h2>
