--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <load src="partials/footer.html" />
-    <!-- <load src="partials/cookie-popup.html" /> -->
+    <load src="partials/cookie-popup.html" />
 
     <script defer type="module" src="./main.js"></script>
   </body>
