--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,35 @@
     />
     <link rel="stylesheet" href="./scss/styles.scss" />
     <link rel="preload" href="./main.js" as="script" crossorigin="anonymous" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Lead your army to victory in Blaze Union! A tactical RPG where strategic battles and gripping storytelling collide in an epic adventure."
+    />
+    <meta
+      name="keywords"
+      content="Blaze Union, tactical RPG, strategy game, epic battles, fantasy adventure, turn-based combat, war strategy"
+    />
+    <meta name="author" content="Blaze Winner Way Team" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://blazewinnerway.com" />
+    <meta property="og:title" content="Blaze Union - Tactical RPG Adventure" />
+    <meta
+      property="og:description"
+      content="Experience thrilling battles, recruit heroes, and forge alliances in Blaze Union! Command your army and shape the fate of the kingdom."
+    />
+    <meta property="og:image" content="https://blazewinnerway.com/cover.jpg" />
+    <meta property="og:url" content="https://blazewinnerway.com" />
+    <meta property="og:site_name" content="Blaze Union - blazewinnerway.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Blaze Union - Tactical RPG Adventure" />
+    <meta
+      name="twitter:description"
+      content="Turn-based strategy meets epic storytelling in Blaze Union. Join the battle now!"
+    />
+    <meta name="twitter:image" content="https://blazewinnerway.com/cover.jpg" />
+    <meta name="twitter:site" content="@blazewinnerway" />
   </head>
 
   <body>
